Updates the index abt and services page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="abtstyle.css">
     <script src="https://kit.fontawesome.com/684a857e9e.js" crossorigin="anonymous"></script>
     <script defer src="aboutusscript.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>Document</title>
 </head>
 
@@ -16,8 +21,8 @@
     <!-- <header class="navbar">
         <div class="logo">
             <img src="./static/images/logo.png" alt="abimstudio logo"> -->
-            <!-- <span>abim<span style="color: red;">studio</span> -->
-        <!-- </div>
+    <!-- <span>abim<span style="color: red;">studio</span> -->
+    <!-- </div>
         <nav class="nav-links">
             <a href="./index.html">Home</a>
             <a href="#" class="active">About Us</a>
@@ -82,9 +87,10 @@
         <div class="cards-container">
             <div class="card">
                 <div class="icon">
-                    <img src="mission-icon.png" alt="Mission Icon">
+                    <img src="./static/images/mission.png" alt="Mission Icon">
+                    <h2>Our Mission</h2>
                 </div>
-                <h2>Our Mission</h2>
+
                 <p>
                     Build the best product that creates the most value for our customers, use business to inspire and
                     implement
@@ -93,9 +99,10 @@
             </div>
             <div class="card">
                 <div class="icon">
-                    <img src="values-icon.png" alt="Values Icon">
+                    <img src="./static/images/mission.png" alt="Values Icon">
+                    <h2>Our Values</h2>
                 </div>
-                <h2>Our Values</h2>
+
                 <p>
                     We strive to go above and beyond for our clients no matter the challenge. We aim to deliver our very
                     best
@@ -107,14 +114,24 @@
 
 
     <section class="faq-section">
-        <div class="faq-header">
-            <h2>Frequently Asked Questions</h2>
-            <p>
-                Got questions? We’ve got answers! Check out our FAQ section to find answers to the most common questions
-                about StreamVibe.
-            </p>
-            <button class="ask-question-btn">Ask a Question</button>
+        <div class="faq-main-div">
+            <div class="faq-header">
+                <h2>Frequently Asked Questions</h2>
+                <p>
+                    Got questions? We’ve got answers! Check out our FAQ section to find answers
+                    to the most common
+                    questions
+                    about us.
+                </p>
+
+            </div>
+            <div class="ask-question-btn">
+                <button class="ask-question-btn">Ask a Question</button>
+            </div>
+
+
         </div>
+
         <div class="faq-container">
             <div class="faq-item">
                 <button class="faq-question">
@@ -184,12 +201,20 @@
                 </div>
             </div>
         </div>
-        <div class="faq-footer">
-            <p>Questions</p>
-            <p>Whether you’re curious about features, a free trial, or even press, we’re here to answer any questions.
-            </p>
-            <button class="contact-btn">Let's Talk Now!</button>
+        <div class="faq-footer-main">
+            <div class="faq-footer">
+                <p>Questions</p>
+                <p>Whether you’re curious about features, a free trial, or even press, we’re here to answer any
+                    questions.
+                </p>
+
+            </div>
+            <div>
+                <button class="contact-btn">Let's Talk Now!</button>
+            </div>
+
         </div>
+
 
     </section>
 
