--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="hero">
             <div class="hero_div1">
                 <div class="cmn_div1">
-                    <p class="heading_mini">Welcome to ABIM Studio</p> <br>
+
                     <p class="heading_white">Your best BIM</p>
                     <p class="heading_red">Partner</p>
                 </div>
@@ -57,7 +57,7 @@
                     </p>
                 </div>
                 <div class="cmn_div1">
-                    <input type="button" value="Get Started >" class="cmn_btn">
+                    <input type="button" value="Get Started" class="cmn_btn">
                 </div>
             </div>
             <div class="hero_div2">
@@ -106,9 +106,9 @@
                         </div>
                     </div>
                     <div class="tc_btm">
-                        <p class="heading_white_med">3d Modelling</p> <br>
+                        <p class="heading_white_med">3D Modelling</p> <br>
                         <p class="text_content_white_card">Create detailed digital representations of architectural
-                            designs for visual exploration and precise understanding of spaces and structures</p>
+                            designs for visual exploration and precise understanding of spaces and structures.</p>
                     </div>
                 </div>
                 <div class="today_card">
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                     <div class="tc_btm">
-                        <p class="heading_white_med">Project Clash <br> Coordination</p> <br>
+                        <p class="heading_white_med">Project Clash Co-ordination</p> <br>
                         <p class="text_content_white_card">Identify and resolve conflicts between different building
                             systems and trades during the design and construction phases to ensure seamless project
                             execution.</p>
@@ -170,10 +170,10 @@
                         </div>
                     </div>
                     <div class="tc_btm">
-                        <p class="heading_white_med">Sustainable Design <br> Solutions</p> <br>
+                        <p class="heading_white_med">Sustainable Design Solutions</p> <br>
                         <p class="text_content_white_card">Develop environmentally friendly architectural strategies
                             that minimize resource use and energy consumption while maximizing functionality and
-                            aesthetic value</p>
+                            aesthetic value.</p>
                     </div>
                 </div>
                 <div class="today_card">
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                     <div class="tc_btm">
-                        <p class="heading_white_med">Construction Documentation </p>
+                        <p class="heading_white_med">Construction Documentation </p> <br>
                         <p class="text_content_white_card">Prepare comprehensive and precise documentation, including
                             drawings and specifications, essential for guiding the construction process and ensuring
                             compliance with design intent.</p>
@@ -196,104 +196,121 @@
         </section>
 
         <section class="review">
-                <div class="review_div1">
-                    <div class="review_div1_inner">
-                        <div class="cmn_div1">
-                            <img src="./static/images/review1_1.png" alt="" class="bg_img">
-                        </div>
-                        <div class="cmn_div1">
-                            <img src="./static/images/review1_2.png" alt="" class="bg_img">
-                        </div>
-                        <div class="cmn_div1">
-                            <img src="./static/images/review1_3.png" alt="" class="bg_img">
-                        </div>
-                    </div>
-                    <div class="review_div1_inner">
-                        <div class="cmn_div1">
-                            <p class="heading_white_med">About Us</p>
-                        </div>
-                        <div class="cmn_div1">
-                            <p class="heading_white_med">Virtually Build Future Projects Today</p>
-                        </div>
-                        <div class="cmn_div1">
-                            <p class="text_content_white">Our Architecture and BIM services are tailored to deliver intelligent and efficient building models 
-                            with a collaborative approach, enhancing coordination and optimizing execution for superior project 
-                            outcomes.</p>
-                        </div>
-                        <div class="cmn_div1">
-                            <button class="cmn_btn">Build The Future Today ></button>
-                        </div>
-                    </div>
-                    <div class="review_div1_inner">
-                        <img src="./static/images/review3.png" alt="" class="bg_img">
-                    </div>
-                </div>
-                <div class="review_div2">
-                    <p class="heading_red">What Our Clients Say About Us</p>
-                </div>
-                <div class="review_div3">
-                    <button class="cmn_btn">
-                        <img src="./static/images/review_left_btn.png" alt="" class="bg_img">
-                    </button>
+            <div class="review_div1">
+                <div class="review_div1_inner">
                     <div class="cmn_div1">
-                        <div><p class="heading_white_med">"Ekaa Designs"</p></div>
-                        <p class="text_content_white"> ABIM STUDIO exceeded my expectations! Their expertise in architecture BIM 
-                            is unmatched. The team was professional, attentive, and delivered outstanding results. Thank You, 
-                            ABIM STUDIO! </p>
+                        <img src="./static/images/review1_1.png" alt="" class="bg_img">
                     </div>
-                    <button class="cmn_btn">
-                        <img src="./static/images/review_right_btn.png" alt="" class="bg_img">
-                    </button>
+                    <div class="cmn_div1">
+                        <img src="./static/images/review1_2.png" alt="" class="bg_img">
+                    </div>
+                    <div class="cmn_div1">
+                        <img src="./static/images/review1_3.png" alt="" class="bg_img">
+                    </div>
                 </div>
+                <div class="review_div1_inner">
+                    <div class="cmn_div1">
+                        <p class="heading_white_med">About <span>Us</span></p>
+                    </div>
+                    <div class="cmn_div1">
+                        <p class="heading_white_med">Virtually Build Future Projects Today</p>
+                    </div>
+                    <div class="cmn_div1">
+                        <p class="text_content_white">Our Architecture and BIM services are tailored to deliver
+                            intelligent and efficient building models
+                            with a collaborative approach, enhancing coordination and optimizing execution for superior
+                            project
+                            outcomes.</p>
+                    </div>
+                    <div class="cmn_div1">
+                        <button class="cmn_btn">Build The Future Today</button>
+                    </div>
+                </div>
+                <div class="review_div1_inner">
+                    <img src="./static/images/review3.png" alt="" class="bg_img">
+                </div>
+            </div>
+            <div class="review_div2">
+                <p class="heading_red">What Our Clients Say About Us</p>
+            </div>
+            <div class="review_div3">
+                <button class="cmn_btn">
+                    <img src="./static/images/review_left_btn.png" alt="" class="bg_img">
+                </button>
+                <div class="cmn_div1">
+                    <div>
+                        <p class="heading_white_med2">"Ekaa Designs"</p>
+                    </div>
+                    <p class="text_content_white"> <span color="#E50000">ABIM STUDIO</span> exceeded my expectations!
+                        Their expertise in
+                        architecture
+                        BIM
+                        is unmatched. The team was professional, attentive, and delivered outstanding results. Thank
+                        You,
+                        <span color="#E50000">ABIM STUDIO!</span>
+                    </p>
+                </div>
+                <button class="cmn_btn">
+                    <img src="./static/images/review_right_btn.png" alt="" class="bg_img">
+                </button>
+            </div>
         </section>
 
         <section class="contact">
             <div class="contact_div1">
                 <div class="contact_div1_upr">
-                    <div><p class="heading_white">Lets Stay In Touch</p></div>
-                    <div><p class="text_content_white">Send us a message and We will get back to you as soon as we can</p></div>
+                    <div>
+                        <p class="heading_white">Lets Stay In Touch</p>
+                    </div>
+                    <div>
+                        <p class="text_content_white">Send us a message and We will get back to you as soon as we can
+                        </p>
+                    </div>
                 </div>
                 <div class="contact_div1_lwr">
                     <form action="" method="post">
+                        <div>
+                            <div class="contact_inp">
+                                <input type="text" class="cmn_inp" name="name" id="" placeholder="name">
+                            </div>
+                            <div class="contact_inp">
+                                <input type="email" class="cmn_inp" name="email" id="" placeholder="email">
+                            </div>
+                        </div>
+                        <div>
+                            <div class="contact_inp">
+                                <input type="number" class="cmn_inp" name="ph_no" id="" placeholder="number">
+                            </div>
+                            <div class="contact_inp">
+                                <input type="text" class="cmn_inp" name="country" id="" placeholder="country">
+                            </div>
+                        </div>
+                        <div>
+                            <div class="contact_inp">
+                                <input type="text" class="cmn_inp" name="state" id="" placeholder="state">
+                            </div>
+                            <div class="contact_inp">
+                                <input type="text" class="cmn_inp" name="company" id="" placeholder="company">
+                            </div>
+                        </div>
+                        <div>
+                            <div class="contact_inp">
+                                <textarea name="message" class="cmn_txtarea" id="" cols="30" rows="10"
+                                    placeholder="message"></textarea>
+
+                            </div>
+                            <input type="submit" class="cmn_btn" value="Send">
+
+                        </div>
+                    </form>
                     <div>
-                        <div class="contact_inp">
-                            <input type="text" class="cmn_inp" name="name" id="" placeholder="name">
-                        </div>
-                        <div class="contact_inp">
-                            <input type="email" class="cmn_inp" name="email" id="" placeholder="email">
-                        </div>
-                    </div>
-                    <div>
-                        <div class="contact_inp">
-                            <input type="number" class="cmn_inp" name="ph_no" id="" placeholder="number">
-                        </div>
-                        <div class="contact_inp">
-                            <input type="text" class="cmn_inp" name="country" id="" placeholder="country"> 
-                        </div>
-                    </div>
-                    <div>
-                        <div class="contact_inp">
-                            <input type="text" class="cmn_inp" name="state" id="" placeholder="state">
-                        </div>
-                        <div class="contact_inp">
-                            <input type="text" class="cmn_inp" name="company" id="" placeholder="company">
-                        </div>
-                    </div>
-                    <div>
-                        <div class="contact_inp">
-                            <textarea name="message" class="cmn_txtarea" id="" cols="30" rows="10" placeholder="message"></textarea>
-                        </div>
-                        <input type="submit" class="cmn_btn" value="send">
-                    </div>
-                </form>
-                    <div>
-                        <p class="text_content_white"> This site is protected by reCaptcha and Google Privacy Policy and 
+                        <p class="text_content_white"> This site is protected by reCaptcha and Google Privacy Policy and
                             Terms of Service Apply</p>
                     </div>
                 </div>
             </div>
         </section>
-        
+
         <section class="footer">
             <div class="footer-content">
                 <div class="social-media">
