--- a/services.html
+++ b/services.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="servstyle.css">
     <script src="https://kit.fontawesome.com/684a857e9e.js" crossorigin="anonymous"></script>
     <!-- <script defer src="aboutusscript.js"></script> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>Services Page</title>
 </head>
 
@@ -17,8 +22,8 @@
     <!-- <header class="navbar">
         <div class="logo">
             <img src="./static/images/logo.png" alt="abimstudio logo"> -->
-            <!-- <span>abim<span style="color: red;">studio</span> -->
-        <!-- </div>
+    <!-- <span>abim<span style="color: red;">studio</span> -->
+    <!-- </div>
         <nav class="nav-links">
             <a href="./index.html">Home</a>
             <a href="./aboutUs.html">About Us</a>
