--- a/contactUs.html
+++ b/contactUs.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/684a857e9e.js" crossorigin="anonymous"></script>
     <title>Document</title>
@@ -52,7 +56,7 @@
     <section class="contact_stn">
         <div class="contact_stn_div1">
             <div class="contact_stn_div1_upper">
-               <p class="heading_white"> Contact Us </p>
+               <div><p class="heading_white"> Contact Us </p></div>
             </div>
             <div class="contact_stn_div1_lower">
                 <div class="contact_stn_div1_lower_left">
