--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/684a857e9e.js" crossorigin="anonymous"></script>
     <title>Document</title>
@@ -294,7 +298,7 @@
                             </div>
                         </div>
                         <div>
-                            <div class="contact_inp">
+                            <div class="contact_inp_txt1">
                                 <textarea name="message" class="cmn_txtarea" id="" cols="30" rows="10"
                                     placeholder="message"></textarea>
 
