--- a/services.html
+++ b/services.html
@@ -11,9 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-
+    <script defer src="index.js"></script>
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>Services Page</title>
+    <title>Services</title>
 </head>
 
 
@@ -49,7 +49,9 @@
             <a href="./aboutUs.html" class="nav_ele">About</a>
             <a href="./services.html" class="nav_ele">Services</a>
             <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
-            <button>Request a demo</button>
+            <div class="ask-question-btn">
+                <button class="ask-question-btn" onclick="redirectToGmail()">Request a demo</button>
+            </div>
         </div>
         <div class="nav_div3">
             <div class="nav_logo">
@@ -65,7 +67,9 @@
                 <div><a href="./aboutUs.html" class="nav_ele">About</a></div>
                 <div><a href="./services.html" class="nav_ele">Services</a></div>
                 <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
-                <div><button>Request a demo</button></div>
+                <div class="ask-question-btn">
+                    <button class="ask-question-btn" onclick="redirectToGmail()">Request a demo</button>
+                </div>
             </div>
         </div>
     </nav>
@@ -73,7 +77,7 @@
     <!-- Fullscreen Image Section -->
     <section class="fullscreen-image">
         <!-- Optional text overlay -->
-        <div class="overlay-text">Welcome to Our Services</div>
+        <!-- <div class="overlay-text">Welcome to Our Services</div> -->
     </section>
 
 
@@ -106,7 +110,7 @@
                     We ensure your project matches your dreams, eliminating surprises and aligning with your
                     expectations.
                 </p>
-                <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a>
+                <!-- <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a> -->
             </div>
             <!-- <div class="arrow-buttons">
                 <button class="arrow-button left">
@@ -117,7 +121,7 @@
                 </button>
             </div> -->
             <div class="image">
-                <img src="./static/images/3dmodelling.png" alt="3D Modeling">
+                <img src="./static/images/3d modeling.webp" alt="3D Modeling">
             </div>
         </div>
 
@@ -130,10 +134,10 @@
                     potential. Our high-quality images and animations help you see exactly how your design will look and
                     feel, making it easy to make confident decisions and bring your vision to life.
                 </p>
-                <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a>
+                <!-- <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a> -->
             </div>
             <div class="image">
-                <img src="./static/images/architectvisual.png" alt="Architectural Visualization">
+                <img src="./static/images/Architectural Visualization.webp" alt="Architectural Visualization">
             </div>
         </div>
 
@@ -147,10 +151,10 @@
                     environmental impact, using green materials and practices to create buildings that are both
                     beautiful and kind to the planet. Enjoy a project that's good for you and the environment
                 </p>
-                <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a>
+                <!-- <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a> -->
             </div>
             <div class="image">
-                <img src="./static/images/sustdesign.png" alt="Sustainable Design Solutions">
+                <img src="./static/images/Sustainable Design Solutions.webp" alt="Sustainable Design Solutions">
             </div>
         </div>
 
@@ -164,10 +168,10 @@
                     process. This clarity helps ensure your project is built as intended and meets all quality and
                     regulatory standards.
                 </p>
-                <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a>
+                <!-- <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a> -->
             </div>
             <div class="image">
-                <img src="./static/images/constdoc.png" alt="Architectural Visualization">
+                <img src="./static/images/construction documentation.webp" alt="Construction Documentation">
             </div>
         </div>
 
@@ -182,10 +186,10 @@
                     environments tailored to your needs and style, from selecting the perfect furnishings to optimizing
                     layouts. Our goal is to craft a space where you feel comfortable and inspired every day.
                 </p>
-                <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a>
+                <!-- <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a> -->
             </div>
             <div class="image">
-                <img src="./static/images/intefitout.png" alt="Sustainable Design Solutions">
+                <img src="./static/images/Interior fit.jpg" alt="Interior Fit Out">
             </div>
         </div>
 
@@ -199,10 +203,10 @@
                     delays, and ensures all elements come together seamlessly, giving you peace of mind throughout
                     construction.
                 </p>
-                <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a>
+                <!-- <a href="#" class="link">View Projects <i class="fa-solid fa-square-arrow-up-right"></i></a> -->
             </div>
             <div class="image">
-                <img src="./static/images/projclasco.png" alt="Architectural Visualization">
+                <img src="./static/images/Project clash coordination.webp" alt="Project clash coordination">
             </div>
         </div>
 
