--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="abtstyle.css">
     <script src="https://kit.fontawesome.com/684a857e9e.js" crossorigin="anonymous"></script>
     <script defer src="aboutusscript.js"></script>
+    <script defer src="index.js"></script>
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>Document</title>
+    <title>About</title>
 </head>
 
 <body>
@@ -47,7 +48,9 @@
             <a href="./aboutUs.html" class="nav_ele">About</a>
             <a href="./services.html" class="nav_ele">Services</a>
             <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
-            <button>Request a demo</button>
+            <div class="redirectToGmail">
+                <button class="ask-question-btn" onclick="redirectToGmail()">Request a demo</button>
+            </div>
         </div>
         <div class="nav_div3">
             <div class="nav_logo">
@@ -63,7 +66,9 @@
                 <div><a href="./aboutUs.html" class="nav_ele">About</a></div>
                 <div><a href="./services.html" class="nav_ele">Services</a></div>
                 <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
-                <div><button>Request a demo</button></div>
+                <div class="ask-question-btn">
+                    <button class="ask-question-btn" onclick="redirectToGmail()">Request a demo</button>
+                </div>
             </div>
         </div>
     </nav>
@@ -71,7 +76,7 @@
     <!-- Fullscreen Image Section -->
     <section class="fullscreen-image">
         <!-- Optional text overlay -->
-        <div class="overlay-text">Welcome to Our About</div>
+        <!-- <div class="overlay-text">Welcome to Our About</div> -->
     </section>
 
 
