--- a/contactUs.html
+++ b/contactUs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,10 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/684a857e9e.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <script defer src="index.js"></script>
+    <title>Contact</title>
 </head>
+
 <body>
     <nav id="nav">
         <div class="nav_div1">
@@ -22,7 +25,9 @@
             <a href="./aboutUs.html" class="nav_ele">About</a>
             <a href="./services.html" class="nav_ele">Services</a>
             <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
-            <button>Request a demo</button>
+            <div class="ask-question-btn">
+                <button class="ask-question-btn" onclick="redirectToGmail()">Request a demo</button>
+            </div>
         </div>
         <div class="nav_div3">
             <div class="nav_logo">
@@ -38,7 +43,9 @@
                 <div><a href="./aboutUs.html" class="nav_ele">About</a></div>
                 <div><a href="./services.html" class="nav_ele">Services</a></div>
                 <div><a href="./contactUs.html" class="nav_ele">Contact</a></div>
-                <div><button>Request a demo</button></div>
+                <div class="ask-question-btn">
+                    <button class="ask-question-btn" onclick="redirectToGmail()">Request a demo</button>
+                </div>
             </div>
         </div>
     </nav>
@@ -56,7 +63,9 @@
     <section class="contact_stn">
         <div class="contact_stn_div1">
             <div class="contact_stn_div1_upper">
-               <div><p class="heading_white"> Contact Us </p></div>
+                <div>
+                    <p class="heading_white"> Contact Us </p>
+                </div>
             </div>
             <div class="contact_stn_div1_lower">
                 <div class="contact_stn_div1_lower_left">
@@ -78,33 +87,34 @@
                     <!-- <div>
 
                     </div> -->
-        
+
                 </div>
-                    <div class="contact_stn_div1_lower_right">
-                        <form action="" method="post">
-                            <div class="cmn_div1">
-                                <p class="heading_white_med"> Lets get in Touch </p>
+                <div class="contact_stn_div1_lower_right">
+                    <form action="" method="post">
+                        <div class="cmn_div1">
+                            <p class="heading_white_med"> Lets get in Touch </p>
+                        </div>
+                        <div class="cmn_div1">
+                            <div class="contact_inp">
+                                <input type="text" name="name" id="" class="cmn_inp" placeholder="name">
                             </div>
-                            <div class="cmn_div1">
-                                <div class="contact_inp">
-                                    <input type="text" name="name" id="" class="cmn_inp" placeholder="name">
-                                </div>
+                        </div>
+                        <div class="cmn_div1">
+                            <div class="contact_inp">
+                                <input type="email" name="email" id="" class="cmn_inp" placeholder="email">
                             </div>
-                            <div class="cmn_div1">
-                                <div class="contact_inp">
-                                    <input type="email" name="email" id="" class="cmn_inp" placeholder="email">
-                                </div>
+                        </div>
+                        <div class="cmn_div1">
+                            <div class="contact_inp_txt">
+                                <textarea name="message" class="cmn_txtarea" id="" cols="30" rows="10"
+                                    placeholder="message"></textarea>
                             </div>
-                            <div class="cmn_div1">
-                                <div class="contact_inp_txt">
-                                    <textarea name="message" class="cmn_txtarea" id="" cols="30" rows="10" placeholder="message"></textarea>
-                                </div>
-                            </div>
-                            <div class="cmn_div1">
-                                <input type="submit" value="Send Message" class="cmn_btn">
-                            </div>
-                        </form>
-                    </div>
+                        </div>
+                        <div class="cmn_div1">
+                            <input type="submit" value="Send Message" class="cmn_btn">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
@@ -138,4 +148,5 @@
     </section>
 
 </body>
+
 </html>
