--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="hero_div2">
-                <img src="/static/images/heroRight.png" alt="hero2" class="bg_img">
+                <img src="/static/images/project.jpg" alt="hero2" class="bg_img">
             </div>
         </section>
 
@@ -208,13 +208,13 @@
             <div class="review_div1">
                 <div class="review_div1_inner">
                     <div class="cmn_div1">
-                        <img src="./static/images/review1_1.png" alt="" class="bg_img">
+                        <img src="./static/images/archBisTodayCard.png" alt="" class="bg_img">
                     </div>
                     <div class="cmn_div1">
-                        <img src="./static/images/review1_2.png" alt="" class="bg_img">
+                        <img src="./static/images/future2.png" alt="" class="bg_img">
                     </div>
                     <div class="cmn_div1">
-                        <img src="./static/images/review1_3.png" alt="" class="bg_img">
+                        <img src="./static/images/heroRight.jpg" alt="" class="bg_img">
                     </div>
                 </div>
                 <div class="review_div1_inner">
@@ -236,7 +236,7 @@
                     </div>
                 </div>
                 <div class="review_div1_inner">
-                    <img src="./static/images/review3.png" alt="" class="bg_img">
+                    <img src="./static/images/project.jpg" alt="" class="bg_img">
                 </div>
             </div>
             <div class="review_div2">
@@ -277,7 +277,7 @@
                     </div>
                 </div>
                 <div class="contact_div1_lwr">
-                    <form action="" method="post">
+                    <form action="">
                         <div>
                             <div class="contact_inp">
                                 <input type="text" class="cmn_inp" name="name" id="" placeholder="name">
@@ -308,7 +308,7 @@
                                     placeholder="message"></textarea>
 
                             </div>
-                            <input type="submit" class="cmn_btn" value="Send">
+                            <input type="submit" class="cmn_btn" value="Send" onclick="redirectToWhatsApp()">
 
                         </div>
                     </form>
